# dino

./: install.sh  make-linux-bundle.sh  meson.build  mingw-cross.txt
crypto-vala/: meson.build
libdino/: meson.build
libdino/src/: application.vala
libdino/src/entity/: account.vala  file_transfer.vala  message.vala  settings.vala
libdino/src/service/: connection_manager.vala  content_item_store.vala  database.vala  file_manager.vala  jingle_file_transfers.vala  legacy_si_file_transfers.vala  message_processor.vala  registration.vala  roster_manager.vala  sticker_manager.vala  vacation_notice.vala
libdino/src/util/: dino_event.vala  text_crypto.vala
main/: meson.build
main/data/: chat_input.ui  gresource.xml  main_window.ui  style.css
main/data/preferences_window/: account_preferences_subpage.ui  add_account_dialog.ui  general_preferences_page.ui
main/src/: main.vala
main/src/ui/: application.vala  conversation_view.vala  conversation_view_controller.vala  effects_overlay.vala  file_send_overlay.vala  main_window.vala  notifier_gnotifications.vala
main/src/ui/chat_input/: chat_input_controller.vala  encryption_button.vala  sticker_picker.vala  view.vala
main/src/ui/conversation_content_view/: code_block_widget.vala  content_populator.vala  conversation_item_skeleton.vala  file_image_widget.vala  message_widget.vala  sticker_widget.vala
main/src/view_model/: preferences_dialog.vala
main/src/windows/: toast_helper.c
plugins/http-files/src/: file_sender.vala
xmpp-vala/src/core/: starttls_xmpp_stream.vala  stream_connect.vala
(+8 files in other folders)
